# ZPE-Prosody

./: .gitignore  .zenodo.json  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_REPORT_V6.md  CONTRIBUTING.md  GATE_STATUS.md  LICENSE  Makefile  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  REPRODUCIBILITY.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: auto-add-to-project.yml  ci.yml  prosody-ci.yml  publish.yml
docs/: ARCHITECTURE.md  CANONICAL_DOC_REGISTRY.md  FALSIFICATION_REPORT.md  FAQ.md  LEGAL_BOUNDARIES.md  README.md  SUPPORT.md  market_surface.json
docs/_reorientation/2026-04-17/: FIX_LOG.md  NOVELTY_CARD.md  OPEN_QUESTIONS.md
docs/custody/git_stashes/: INDEX.txt  stash_2026-04-14_citation_contributing.patch  stash_2026-04-14_citation_contributing.stat.txt  stash_2026-04-23_readme_workstream.patch  stash_2026-04-23_readme_workstream.stat.txt
docs/custody/restart_prompts/: ZPE-Prosody_STARTUP_PROMPT_2026-04-24.md
docs/custody/status_packets/: README.md
docs/family/: LANE_INTERLOCKS.md  PROSODY_COMPATIBILITY_VECTOR.json  RELEASE_IMPACT.md
examples/: basic_roundtrip.py
proofs/: FINAL_STATUS.md  PROOF_INDEX.md
proofs/artifacts/: c005_replacement_analysis.md  c006_retrieval_failure_analysis.md
proofs/artifacts/2026-02-20_zpe_prosody_wave1/: before_after_metrics.json  blockers_before_after.json  claim_status_delta.md  command_log.txt  commercialization_risk_register.md  concept_open_questions_resolution.md  concept_resource_traceability.json  determinism_replay_results.json  falsification_results.md  gate_b_roundtrip.json  gate_c_threshold_validation.json  gate_d_falsification_summary.json  handoff_manifest.json  impracticality_decisions.json  innovation_delta_report.md  integration_readiness_contract.json  internet_evidence_log.md  max_claim_adjudication.json  max_claim_resource_map.json  max_resource_lock.json  max_resource_validation_log.md  mos_crosscheck_report.json  net_new_gap_closure_matrix.json  prosody_compression_benchmark.json  prosody_energy_fidelity.json  prosody_f0_fidelity.json  prosody_latency_benchmark.json  prosody_retrieval_eval.json  prosody_transfer_eval.json  quality_gate_scorecard.json  regression_results.txt  residual_risk_register.md  resource_lock.json  runpod_dataset_stage_manifest.json  runpod_exec_plan.md  runpod_readiness_manifest.json  runpod_requirements_lock.txt
proofs/artifacts/comp_benchmarks/: prosody_codec_comparison.json  summary.md
proofs/artifacts/librispeech_benchmark/: README.md  command_log.txt  compression_benchmark.json  f0_fidelity.json  latency_benchmark.json  sample_manifest.json  timing_fidelity.json
proofs/runbooks/: 20260321T220046Z_codex_receipt.md  20260321T225634Z_codex_receipt.md  20260321T232422Z_codex_receipt.md  RUNBOOK_ZPE_PROSODY_MASTER.md
proofs/runbooks/gates/: RUNBOOK_GATE_A.md  RUNBOOK_GATE_B.md  RUNBOOK_GATE_C.md  RUNBOOK_GATE_D.md  RUNBOOK_GATE_E.md  RUNBOOK_GATE_M_MAXIMALIZATION.md
scripts/: common.py  determinism_replay.py  fixture_lib.py  gate_a_lock.py  gate_b_build.py  gate_c_benchmarks.py  gate_d_falsification.py  gate_e_eval_and_pack.py  gate_m_claim_adjudication.py  gate_m_resource_ingestion.py  generate_fixtures.py  librispeech_benchmark.py  validate_thresholds.py  verify_release_surface.py
scripts/comp_benchmark/: run_prosody_comparison.py
src/zpe_prosody/: __init__.py  api_service.py  codec.py  constants.py  eval.py  extract.py  models.py  retrieval.py  transfer.py  utils.py
tests/: test_api_contract.py  test_clean_install.py  test_examples.py  test_librosa_f0_roundtrip.py  test_packet_format.py  test_roundtrip.py
(+19 files in other folders)
