[build-system]
requires = ["setuptools>=77,<82", "wheel>=0.43,<0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-prosody"
version = "0.1.1"
description = "Deterministic contour codec, retrieval, and transfer evaluation surfaces for ZPE Prosody."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Zer0pa-SAL-7.0"
license-files = ["LICENSE"]
authors = [{name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai"}]
keywords = [
  "prosody",
  "speech",
  "f0-contours",
  "deterministic-replay",
  "retrieval-evaluation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Prosody"
Documentation = "https://github.com/Zer0pa/ZPE-Prosody#readme"
Repository = "https://github.com/Zer0pa/ZPE-Prosody"
Issues = "https://github.com/Zer0pa/ZPE-Prosody/issues"
Changelog = "https://github.com/Zer0pa/ZPE-Prosody/blob/main/CHANGELOG.md"

[project.optional-dependencies]
api = [
  "fastapi>=0.109",
  "uvicorn>=0.27",
]
dev = [
  "build>=1.2",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["zpe_prosody*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
